# ecen427_student

./: .gitignore  Makefile  README.md  format.py  submit.py
.github/workflows/: submission.yml
device_tree/: .gitignore  Makefile  README  bitstream.bif  configure_hardware.sh  ecen427.dtbo  ecen427.dtsi  makefile  pynq.dts  readme.md
device_tree/dtb/: devicetree.dtb
device_tree/dts/: board_ecen427.dtsi  system.dts
examples/valgrind/: .gitignore
examples/valgrind/01_memory_leak/: Makefile  README.md  main.cpp
examples/valgrind/02_use_after_free/: Makefile  README.md  main.cpp
examples/valgrind/03_double_free/: Makefile  README.md  main.cpp
examples/valgrind/04_uninitialized_memory/: Makefile  README.md  main.cpp
examples/valgrind/05_array_out_of_bounds/: Makefile  README.md  main.cpp
examples/valgrind/06_missing_destructor/: Makefile  README.md  main.cpp
examples/valgrind/07_iterator_invalidation/: Makefile  README.md  main.cpp
examples/valgrind/08_null_pointer_dereference/: Makefile  README.md  main.cpp
hw/: .gitignore  Makefile  ecen427.bit  ecen427.tcl  run_sim.tcl  run_synth.tcl  top.v
hw/constraints/: top.xdc
hw/digilent_ip/vivado-library/: .gitignore
hw/digilent_ip/vivado-library/ip/audio_codec_ctrl_v1.0/: component.xml
hw/digilent_ip/vivado-library/ip/audio_codec_ctrl_v1.0/src/: i2s_ctrl.vhd  user_logic.vhd
hw/digilent_ip/vivado-library/ip/audio_codec_ctrl_v1.0/src/fifo/: fifo.veo  fifo.vho  fifo.xci  fifo.xml
hw/digilent_ip/vivado-library/ip/audio_codec_ctrl_v1.0/src/fifo/sim/: fifo.v
hw/digilent_ip/vivado-library/ip/audio_codec_ctrl_v1.0/src/fifo/synth/: fifo.vhd
hw/hls/bitmap_accelerator/: Makefile  bitmap_accelerator.h  bitmap_accelerator_test.c  proj.tcl
hw/hls/bitmap_accelerator/test_bitmaps/: copy_195_302_to_0_0_size_17_19.h  copy_55_85_to_200_300_size_5_7.h  rgb_1_2_3_rect_at_600_400_size_1_79.h  rgb_50_75_100_rect_at_50_75_size_15_25.h
hw/ip_repo/pit/: pit.sv  pit.v
kernel/audio_codec/: audio_codec.c  test_insmod.sh
kernel/dma_desc/: dma_desc_ioctl.h
kernel/hdmi_ctrl/: ecen427_ioctl.h
kernel/helloworld/: Makefile  helloworld.c
kernel/lab4_audio_codec/: Makefile  audio_codec.c  test_insmod.sh
kernel/lab6_pit/: Makefile
py/: mytypes.py  repo_test.py  repo_test_suite.py  test_suite_427.py
userspace/: CMakeLists.txt  run_remote.sh
userspace/apps/: CMakeLists.txt
userspace/apps/buttons_test/: CMakeLists.txt  buttons_test.cpp  main.c
userspace/apps/clock/: CMakeLists.txt  clock.c  clock.cpp
userspace/apps/dma_benchmarking/: CMakeLists.txt  dma_benchmarking.cpp
userspace/apps/dma_test/: CMakeLists.txt  dma_test.cpp
userspace/apps/frame_buffer_test/: CMakeLists.txt  main.c
userspace/apps/graphics_benchmarking/: CMakeLists.txt  main.cpp
userspace/apps/graphics_syscalls/: CMakeLists.txt  main.cpp
userspace/apps/graphics_test/: CMakeLists.txt  main.cpp
userspace/apps/helloworld/: CMakeLists.txt  main.cpp
userspace/apps/int_rate/: CMakeLists.txt  int_rate.cpp
userspace/apps/interrupt_test/: CMakeLists.txt  main.c  main.cpp
userspace/apps/lab1_helloworld/: CMakeLists.txt  main.c
userspace/apps/lab2_clock/: CMakeLists.txt
userspace/apps/lab3_space_invaders/: CMakeLists.txt
userspace/apps/space_invaders/: Alien.h  Aliens.h  Audio.h  Bullet.h  Bullets.h  Bunker.h  BunkerBlock.h  Bunkers.h  CMakeLists.txt  Colors.h  GameObject.h  Gameplay.h  Globals.h  Graphics.h  HighScores.h  Lives.h  Score.h  Sprite.cpp  Sprite.h  Sprites.cpp  Sprites.h  Tank.h  UFO.h  config.h  main.cpp  print_alien_test.c  sprites.c  sprites.h  utils.h
userspace/apps/space_invaders/resources/: sprites.c  sprites.h
userspace/apps/switches_test/: CMakeLists.txt  main.c  switches_test.cpp
userspace/drivers/: CMakeLists.txt  system.h
userspace/drivers/audio_config/: CMakeLists.txt  audio_config.c  audio_config.h  i2cps.c  i2cps.h
userspace/drivers/buttons/: CMakeLists.txt  buttons.h
userspace/drivers/copy_bitmap_region/: CMakeLists.txt  copy_bitmap_region.h
userspace/drivers/dma/: CMakeLists.txt  dma.h
userspace/drivers/fill_bitmap_region/: CMakeLists.txt  fill_bitmap_region.h
userspace/drivers/intc/: CMakeLists.txt  intc.h
userspace/drivers/switches/: CMakeLists.txt  switches.h
userspace/drivers/uio_example/: generic_uio_example.c  generic_uio_example.h
