add_subdirectory(helloworld)

# add_subdirectory(buttons_test)
# add_subdirectory(switches_test)
# add_subdirectory(interrupt_test)
# add_subdirectory(int_rate)

# add_subdirectory(clock)

# add_subdirectory(graphics_benchmarking)
# add_subdirectory(graphics_syscalls)
# add_subdirectory(graphics_test)
# add_subdirectory(space_invaders)

# add_subdirectory(audio_driver_test1)
# add_subdirectory(audio_driver_test2)

# add_subdirectory(dma_test)
# add_subdirectory(dma_benchmarking)
